WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241463
InspectorScopedShaderProgramHighlight breaks indexed blend state
https://bugs.webkit.org/show_bug.cgi?id=241463
Summary
InspectorScopedShaderProgramHighlight breaks indexed blend state
Alexey Knyazev
Reported
2022-06-09 06:31:31 PDT
InspectorScopedShaderProgramHighlight must properly backup/restore indexed blend state when OES_draw_buffers_indexed is enabled.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-06-16 06:32:14 PDT
<
rdar://problem/95292922
>
EWS
Comment 2
2022-06-16 23:24:31 PDT
Committed
r295629
(
251634@main
): <
https://commits.webkit.org/251634@main
> Reviewed commits have been landed. Closing PR #1534 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug