Fix InspectorScopedShaderProgramHighlight for indexed blend state https://bugs.webkit.org/show_bug.cgi?id=241463

Patch by Alexey Knyazev <3479527+lexaknyazev@users.noreply.github.com> on 2022-06-16
Reviewed by Kimmo Kinnunen.

* The program highlight helper now correctly restores
indexed blend state when OES_draw_buffers_indexed is enabled.
* The program highlight helper now skips non-default FBOs.
* Optimized execution to directly call into GL context
avoiding extra validation and value unboxing.

* Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::InspectorScopedShaderProgramHighlight::showHighlight):
(WebCore::InspectorScopedShaderProgramHighlight::hideHighlight):
(WebCore::InspectorScopedShaderProgramHighlight::saveBlendValue): Deleted.
(WebCore::InspectorScopedShaderProgramHighlight::hasBufferBinding): Deleted.
(WebCore::InspectorScopedShaderProgramHighlight::hasFramebufferParameterAttachment): Deleted.
* Source/WebCore/html/canvas/WebGLRenderingContextBase.h:

Canonical link: https://commits.webkit.org/251634@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295629 268f45cc-cd09-0410-ab3c-d52691b4dbfc