Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp
@@ -688,37 +688,38 @@ void InspectorScopedShaderProgramHighlight::showHighlight()
     if (!m_program || LIKELY(!InspectorInstrumentation::isWebGLProgramHighlighted(m_context, *m_program)))
         return;
 
-    if (hasBufferBinding(GraphicsContextGL::FRAMEBUFFER_BINDING)) {
-        if (!hasBufferBinding(GraphicsContextGL::RENDERBUFFER_BINDING))
-            return;
-        if (hasFramebufferParameterAttachment(GraphicsContextGL::DEPTH_ATTACHMENT))
-            return;
-        if (hasFramebufferParameterAttachment(GraphicsContextGL::STENCIL_ATTACHMENT))
-            return;
-#if ENABLE(WEBGL2)
-        if (hasFramebufferParameterAttachment(GraphicsContextGL::DEPTH_STENCIL_ATTACHMENT))
-            return;
-#endif
-    }
+    if (m_context.m_framebufferBinding)
+        return;
 
-    saveBlendValue(GraphicsContextGL::BLEND_COLOR, m_savedBlend.color);
-    saveBlendValue(GraphicsContextGL::BLEND_EQUATION_RGB, m_savedBlend.equationRGB);
-    saveBlendValue(GraphicsContextGL::BLEND_EQUATION_ALPHA, m_savedBlend.equationAlpha);
-    saveBlendValue(GraphicsContextGL::BLEND_SRC_RGB, m_savedBlend.srcRGB);
-    saveBlendValue(GraphicsContextGL::BLEND_SRC_ALPHA, m_savedBlend.srcAlpha);
-    saveBlendValue(GraphicsContextGL::BLEND_DST_RGB, m_savedBlend.dstRGB);
-    saveBlendValue(GraphicsContextGL::BLEND_DST_ALPHA, m_savedBlend.dstAlpha);
-    saveBlendValue(GraphicsContextGL::BLEND, m_savedBlend.enabled);
+    auto& gl = *m_context.graphicsContextGL();
+
+    // When OES_draw_buffers_indexed extension is enabled,
+    // these state queries return the state for draw buffer 0.
+    // Constant blend color is always the same for all draw buffers.
+    gl.getFloatv(GraphicsContextGL::BLEND_COLOR, m_savedBlend.color);
+    m_savedBlend.equationRGB = gl.getInteger(GraphicsContextGL::BLEND_EQUATION_RGB);
+    m_savedBlend.equationAlpha = gl.getInteger(GraphicsContextGL::BLEND_EQUATION_ALPHA);
+    m_savedBlend.srcRGB = gl.getInteger(GraphicsContextGL::BLEND_SRC_RGB);
+    m_savedBlend.dstRGB = gl.getInteger(GraphicsContextGL::BLEND_DST_RGB);
+    m_savedBlend.srcAlpha = gl.getInteger(GraphicsContextGL::BLEND_SRC_ALPHA);
+    m_savedBlend.dstAlpha = gl.getInteger(GraphicsContextGL::BLEND_DST_ALPHA);
+    m_savedBlend.enabled = gl.isEnabled(GraphicsContextGL::BLEND);
 
     static const GCGLfloat red = 111.0 / 255.0;
     static const GCGLfloat green = 168.0 / 255.0;
     static const GCGLfloat blue = 220.0 / 255.0;
     static const GCGLfloat alpha = 2.0 / 3.0;
+    gl.blendColor(red, green, blue, alpha);
 
-    m_context.enable(GraphicsContextGL::BLEND);
-    m_context.blendColor(red, green, blue, alpha);
-    m_context.blendEquation(GraphicsContextGL::FUNC_ADD);
-    m_context.blendFunc(GraphicsContextGL::CONSTANT_COLOR, GraphicsContextGL::ONE_MINUS_SRC_ALPHA);
+    if (m_context.m_oesDrawBuffersIndexed) {
+        gl.enableiOES(GraphicsContextGL::BLEND, 0);
+        gl.blendEquationiOES(0, GraphicsContextGL::FUNC_ADD);
+        gl.blendFunciOES(0, GraphicsContextGL::CONSTANT_COLOR, GraphicsContextGL::ONE_MINUS_SRC_ALPHA);
+    } else {
+        gl.enable(GraphicsContextGL::BLEND);
+        gl.blendEquation(GraphicsContextGL::FUNC_ADD);
+        gl.blendFunc(GraphicsContextGL::CONSTANT_COLOR, GraphicsContextGL::ONE_MINUS_SRC_ALPHA);
+    }
 
     m_didApply = true;
 }
@@ -728,45 +729,23 @@ void InspectorScopedShaderProgramHighlight::hideHighlight()
     if (!m_didApply)
         return;
 
-    if (!m_savedBlend.enabled)
-        m_context.disable(GraphicsContextGL::BLEND);
+    auto& gl = *m_context.graphicsContextGL();
 
-    const RefPtr<Float32Array>& color = m_savedBlend.color;
-    m_context.blendColor(color->item(0), color->item(1), color->item(2), color->item(3));
-    m_context.blendEquationSeparate(m_savedBlend.equationRGB, m_savedBlend.equationAlpha);
-    m_context.blendFuncSeparate(m_savedBlend.srcRGB, m_savedBlend.dstRGB, m_savedBlend.srcAlpha, m_savedBlend.dstAlpha);
+    gl.blendColor(m_savedBlend.color[0], m_savedBlend.color[1], m_savedBlend.color[2], m_savedBlend.color[3]);
 
-    m_savedBlend.color = nullptr;
+    if (m_context.m_oesDrawBuffersIndexed) {
+        gl.blendEquationSeparateiOES(0, m_savedBlend.equationRGB, m_savedBlend.equationAlpha);
+        gl.blendFuncSeparateiOES(0, m_savedBlend.srcRGB, m_savedBlend.dstRGB, m_savedBlend.srcAlpha, m_savedBlend.dstAlpha);
+        if (!m_savedBlend.enabled)
+            gl.disableiOES(GraphicsContextGL::BLEND, 0);
+    } else {
+        gl.blendEquationSeparate(m_savedBlend.equationRGB, m_savedBlend.equationAlpha);
+        gl.blendFuncSeparate(m_savedBlend.srcRGB, m_savedBlend.dstRGB, m_savedBlend.srcAlpha, m_savedBlend.dstAlpha);
+        if (!m_savedBlend.enabled)
+            gl.disable(GraphicsContextGL::BLEND);
+    }
 
     m_didApply = false;
-}
-
-template <typename T>
-void InspectorScopedShaderProgramHighlight::saveBlendValue(GCGLenum attachment, T& destination)
-{
-    WebGLAny param = m_context.getParameter(attachment);
-    if (std::holds_alternative<T>(param))
-        destination = std::get<T>(param);
-}
-
-bool InspectorScopedShaderProgramHighlight::hasBufferBinding(GCGLenum pname)
-{
-    WebGLAny binding = m_context.getParameter(pname);
-    if (pname == GraphicsContextGL::FRAMEBUFFER_BINDING)
-        return std::holds_alternative<RefPtr<WebGLFramebuffer>>(binding) && std::get<RefPtr<WebGLFramebuffer>>(binding);
-    if (pname == GraphicsContextGL::RENDERBUFFER_BINDING)
-        return std::holds_alternative<RefPtr<WebGLRenderbuffer>>(binding) && std::get<RefPtr<WebGLRenderbuffer>>(binding);
-    return false;
-}
-
-bool InspectorScopedShaderProgramHighlight::hasFramebufferParameterAttachment(GCGLenum attachment)
-{
-    WebGLAny attachmentParameter = m_context.getFramebufferAttachmentParameter(GraphicsContextGL::FRAMEBUFFER, attachment, GraphicsContextGL::FRAMEBUFFER_ATTACHMENT_OBJECT_TYPE);
-    if (!std::holds_alternative<unsigned>(attachmentParameter))
-        return false;
-    if (std::get<unsigned>(attachmentParameter) != static_cast<unsigned>(GraphicsContextGL::RENDERBUFFER))
-        return false;
-    return true;
 }
 
 static bool isHighPerformanceContext(const RefPtr<GraphicsContextGL>& context)
